// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Recipient Email Verification renders single email verification tab correctly when selected 1`] = `
<Connect(ConditionSwitch)>
  <Case
    condition={[Function]}
  >
    <Page
      empty={Object {}}
      title="Recipient Email Validation"
    >
      <Tabs
        color="orange"
        connectBelow={true}
        selected={1}
        tabs={
          Array [
            Object {
              "content": "Validate A List",
              "onClick": [Function],
            },
            Object {
              "content": "Validate a Single Address",
              "onClick": [Function],
            },
          ]
        }
      />
      <Panel>
        <Connect(ReduxForm) />
      </Panel>
    </Page>
  </Case>
  <Case
    condition={[Function]}
  >
    <Connect(RVDisabledPage) />
  </Case>
</Connect(ConditionSwitch)>
`;

exports[`Page: Recipient Email Verification should render Recipient Validation page correctly 1`] = `
<Connect(ConditionSwitch)>
  <Case
    condition={[Function]}
  >
    <Page
      empty={Object {}}
      title="Recipient Email Validation"
    >
      <Tabs
        color="orange"
        connectBelow={true}
        selected={0}
        tabs={
          Array [
            Object {
              "content": "Validate A List",
              "onClick": [Function],
            },
            Object {
              "content": "Validate a Single Address",
              "onClick": [Function],
            },
          ]
        }
      />
      <Panel>
        <Connect(ReduxForm) />
      </Panel>
      <Connect(WithContext(ListResults)) />
    </Page>
  </Case>
  <Case
    condition={[Function]}
  >
    <Connect(RVDisabledPage) />
  </Case>
</Connect(ConditionSwitch)>
`;
